Fixed white bar while collapsing

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,7 +1,6 @@
 // Base styling for the navbar
 #mainNav {
   box-shadow: $box-shadow;
-  background-color: $white;
   transition: background-color 0.2s ease;
   .navbar-brand {
     font-family: $font-family-sans-serif;
